# vergr-inhibit

./: CMakeLists.txt  COPYING.MIT  README.md
src/: CMakeLists.txt  main.cpp  notificationinhibition.cpp  notificationinhibition.h  vergrzoom.sh.in  windowwatcher.cpp  windowwatcher.h
